# Vitalii

./: .gitignore  DZ 09.09.2021 4 var. 1 zadacha.cpp  DZ 09.09.2021 4 var. 2 zadacha.cpp  README.md  test DZ 09.txt
2nd semester/: README.md
2nd semester/1_lab/1_lab/: 1_lab.cpp  CMakeLists.txt
2nd semester/Additional_1/Additional_1/: Additional_1.cpp  CMakeLists.txt  output.txt
2nd semester/Additional_2/Additional_2/: Additional_2.cpp  CMakeLists.txt
2nd semester/EXAM/: .gitignore
2nd semester/EXAM/EXAM/CudaFluidSimulation/: CMakeLists.txt  Source.cpp  kernel.cu
3nd semester/: Lab15.cpp
3nd semester/3_lab/3_lab/: 3_lab.cpp  CMakeLists.txt
4nd semester/: АСД - 4 семестр.docx
4nd semester/Lab_10/: CMakeLists.txt  input.txt  lab_10.cpp
4nd semester/Lab_11/: CMakeLists.txt  input.txt  lab_11.cpp
4nd semester/Lab_12/: CMakeLists.txt  input.txt  lab_12.cpp
4nd semester/Lab_13/: CMakeLists.txt  lab_13.cpp
4nd semester/Lab_14/: CMakeLists.txt  lab_14.cpp
4nd semester/Lab_15/: CMakeLists.txt  input.txt  lab_15.cpp
4nd semester/Lab_16/: CMakeLists.txt  input.txt  lab_16.cpp
4nd semester/Lab_17/: CMakeLists.txt  input.txt  lab_17.cpp
4nd semester/Lab_18/: CMakeLists.txt  input.txt  lab_18.cpp
4nd semester/Lab_2/: CMakeLists.txt  input.txt  lab_2.cpp
4nd semester/Lab_3/: CMakeLists.txt  input.txt  lab_3.cpp
4nd semester/Lab_4/: CMakeLists.txt  lab_4.cpp
4nd semester/Lab_5/: CMakeLists.txt  input.txt  lab_5.cpp
4nd semester/Lab_6/: CMakeLists.txt  func.cpp  func.h  input.txt  lab_6.cpp
4nd semester/Lab_7/: CMakeLists.txt  func.cpp  func.h  input.txt  lab_7.cpp
4nd semester/Lab_8/: CMakeLists.txt  func.cpp  func.h  lab_8.cpp
4nd semester/Lab_9/: CMakeLists.txt  func.cpp  func.h  input.txt  lab_9.cpp
Additional 1/: .gitignore
Additional 1/Additional 1/: Additional 1.cpp  Additional.cpp  CMakeLists.txt
Additional 8/Additional 8/: Additional_8.cpp  CMakeLists.txt  Trapezoid.cpp  Trapezoid.hpp
Additional_7/Additional_7/: Additional_7.cpp  CMakeLists.txt  SomeFunctions.cpp
Additional_9/Additional_9/: Additional_9.cpp
First semester/EXAM_1/EXAM/EXAM/: CMakeLists.txt  EXAM.cpp
First semester/EXAM_1/EXAM/EXAM/images/: Continue.psd  Exit.psd  New_Game.psd  background.psd
First semester/EXAM_1/EXAM/EXAM/inc/: Button.hpp  Functions.hpp  Game.hpp  Map.hpp  Menu.hpp
First semester/EXAM_1/EXAM/EXAM/src/: Functions.cpp  Game.cpp  Map.cpp
First semester/Homework on 16.09.2021 2 lab/: DZ 09.09.2021 4 var. 1 zadacha.cpp
First semester/Homework on 23.09.2021 3 lab/: DZ на 23.09.2021.cpp
First semester/Zadacha 3 Additional/: .gitignore  CMakeLists.txt
Home work на 30.09.2021/DZ на 30.09.2021 3 задача/: DZ на 30.09.2021 3 задача.cpp
Home work на 30.09.2021/DZ на 30.09.2021 _ Задача 1/: DZ на 30.09.2021 _ Задача 1.cpp
Home work на 30.09.2021/DZ на 30.09.2021 Задача 2/: DZ на 30.09.2021 Задача 2.cpp  output.txt
Home work на 30.09.2021/Рандомные числа/: Рандомные числа.cpp
Homework on 07.10.2021 5 lab/DZ на 07.10.21 Задача №1/: output.txt
Homework on 07.10.2021 5 lab/DZ на 07.10.21 Задача №2/: input.txt
Homework on 07.10.2021/DZ на 07.10.21 Задача №2/: output.txt
Homework on 09.09.2021 1 lab/DZ 02.09.2021 4 var/: CMakeLists.txt
Homework on 14.10.2021 6 lab/: Function.hpp  Homework на 14.10.2021.cpp
Homework on 16.09.2021 2 lab/: .gitignore  CMakeLists.txt
Homework on 25.11.2021 10 lab/Homework on 25.11.2021 10 lab/: Homework_on_25.11.2021_10_lab.cpp  Rectangle.cpp
Homework on 30.09.2021 4 lab/DZ на 30.09.2021 3 задача/: input.txt  output.txt
Homework on 30.09.2021 4 lab/DZ на 30.09.2021 _ Задача 1/: input.txt
Homework on 30.09.2021 4 lab/DZ на 30.09.2021 Задача 2/: input.txt
Homework on 30.09.2021 4 lab/Рандомные числа/: Random.txt
Homework на 07.10.2021/: DZ на 07.10.2021. Задача №1.cpp  input.txt
Homework на 14.10.2021/: Function.cpp  Function.hpp
Homework_on_02.12.21_lab11/Homework_on_02.12.21_lab11/: Homework_on_02.12.21_lab11.cpp  Physics.cpp  Physics.hpp  README.md
Homeworn on 04.11.2021 9 lab/: CMakeLists.txt  README.md  main.cpp
Tusk 5 additional/: .gitignore
Tusk 5 additional/Tust 5 additional/Tust 5 additional/: CMakeLists.txt  SomeFunctions.cpp  SomeFunctions.hpp  Tusk5additional.cpp  Tust 5 additional.cpp  Tust5additional.cpp
Tusk 5 additional/Tust 5 additional/Tust 5 additional/inc/: SomeFunctions.hpp
Tusk 5 additional/Tust 5 additional/Tust 5 additional/src/: SomeFunctions.cpp  Tust 5 additional.cpp
Zadacha 3 Additional/: Zadacha3Additional.cpp
Zadacha 3 Additional/src/: Functions.cpp
Задача 3 Additional/: CMakeLists.txt  Functions.hpp  Header.h  README.md  Задача 3 Additional.cpp
Задача 4 Additional/: Задача 4 Additional.cpp
(+135 files in other folders)
